# danmaku

./: .gitignore  config.ini  danmaku_sdk.lua  meson.build  run.sh  stage0.lua  stage1.lua
.cache/clangd/index/: bullet.c.614A86DA77692913.idx  bullet.h.CC8684A80B65B5C9.idx  config.c.09B14B0D29E7286A.idx  config.h.4740D5E709606732.idx  fps.c.19FB238B514E0BB9.idx  fps.h.9875CDC93B20ACBB.idx  game.c.3C294A167DE38031.idx  game.h.8337AA1DC0F70DF6.idx  log.c.6A169C4F78C9EF95.idx  log.h.71A10C1A297ED376.idx  lua_api.c.B053FC5EDB711178.idx  lua_api.h.0C8DBDF9DA21269C.idx  main.c.3DBFADDFFAD89E7F.idx  sdl.c.91963EE0AF4F6883.idx  sdl.h.FB751263B56C5A26.idx
assets/: EoSD_bullets.json
examples/: bulletAPI.lua
include/: bullet.h  bullet_id.h  bullet_system.h  config.h  fps.h  game.h  lua_api.h  sdl.h  spritesheet.h
include/lua/: env.h  init.h  stage.h  wrappers.h
lua_api/: bulletAPI.lua
mods/base/: stage0.lua  stage1.lua  stage2.lua
mods/base/assets/: EoSD_bullets.json
scenarios/base/: bulletAPI.lua  manifest.json
scenarios/base/stages/: stage1.lua
src/: bullet.c  bullet_system.c  config.c  fps.c  game.c  lua_api.c  main.c  sdl.c  spritesheet.c
src/config/: config.c
src/engine/: engine.c  engine.h
src/engine/bullet/: bullet.c  bullet.h  bullet_id.c  bullet_id.h  bullet_system.c  bullet_system.h
src/engine/config/: config.c  config.h
src/engine/framerate/: limiter.c  limiter.h
src/engine/render/: bullet_renderer.c  bullet_renderer.h  spritesheet.c  spritesheet.h
src/engine/time/: fps.c  fps.h
src/lua/: env.c  env.h  init.c  init.h  lua_system.c  lua_system.h  stage.c  stage.h  wrappers.c  wrappers.h
src/platform/: sdl.c  sdl.h
subprojects/log/: meson.build
subprojects/log/include/: log.h
subprojects/log/src/: log.c
